--- a/src/app/blog/blog.component.scss
+++ b/src/app/blog/blog.component.scss
@@ -1,3 +1,9 @@
+@mixin colorFond($couleur: black) {
+    background-color: rgba($color: $couleur, $alpha: 0.2);
+    border-color: $couleur;
+    color: black;
+}
+
 .cadrepost
 {
     display: block;
@@ -5,17 +11,19 @@
     width: 60%;
     background-color: rgba($color: black, $alpha: 0.6);
     color: white;
-    border: 2px solid black;
+    font-style: oblique;
+    border: 5px solid black;
+    margin-bottom: 10px;
 }
 
-.inred
+.isKO
 {
-    background-color: rgba($color: red, $alpha: 0.3);
+    @include colorFond(red);
 }
 
-.ingreen
+.isOK
 {
-    background-color: rgba($color: green, $alpha: 0.3);
+    @include colorFond(blue);
 }
 
 #entete
@@ -25,11 +33,9 @@
     justify-content:space-between;
 }
 
-button
+.btn
 {
-    height: 32px;
-    width: 60px;
-    margin: 20px;
+    margin-right: 20px;
 }
 
 .like
